# study-reminder

./: .gitignore  package-lock.json
study-reminder/: gen_icon.py  gen_icons.mjs
study-reminder/docs/: PRD.md  TDD.md  voice-scripts.md
study-reminder/frontend/: floating.html  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
study-reminder/frontend/src/: App.svelte  main.ts
study-reminder/frontend/src/components/: AllTasksView.svelte  DayView.svelte  MonthView.svelte  TaskEditor.svelte
study-reminder/frontend/src/lib/: api.ts  store.ts  types.ts
study-reminder/frontend/src/styles/: app.css
study-reminder/src-tauri/: Cargo.toml  tauri.conf.json
study-reminder/src-tauri/capabilities/: default.json
study-reminder/src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  models.rs  reminder.rs
